--- a/src/data/grammar/headlines/mtg-strategy-headline.yaml
+++ b/src/data/grammar/headlines/mtg-strategy-headline.yaml
@@ -11,15 +11,22 @@ playGuide:
 - "[_verbed:printed,banned,unbanned,played,ignored,reprinted]
   [_cardCategory:#cardClassificationBase#,#popularFormat# #cardClassificationBase#,#basicColors# #cardClassificationBase#]
   [_setOrBlock:#cardSet#,#mtgRealSet#,#cardBlock##cardBlockName# Block]
+  [_fromSetOrBlock:from #_setOrBlock#,from #_setOrBlock#,from #_setOrBlock#,in #format# right now]
+  [_misrated:underrated,overrated,forgotten]
+  [_wishes:wishes were never printed,wishes you'd forget,doesn't understand]
+  [_secret:time forgot,slipped through the cracks,that deserve a second look,#officialEntity# #_wishes#]
   [_list:
   #count# #broadCardClassification# that should never have been #_verbed#,
   The #count.capitalize# #cardSuperlative.capitalizeAll# #broadCardClassification.capitalizeAll# of All-Time,
   #count# #broadCardClassification# that had #peoplePlural# #cardReactionVerb#,
-  The #count# #cardSuperlative# #_cardCategory.s# from #_setOrBlock#,
+  The #count# #cardSuperlative# #_cardCategory.s# #_fromSetOrBlock#,
+  The top #count# #_cardCategory.s# #_fromSetOrBlock#,
+  #count# #_misrated# #_cardCategory.s# from #_setOrBlock#,
+  #count# #_cardCategory.s# from #_setOrBlock# that #_secret#,
   #count# #_cardCategory.capitalize.s# that #_peopleOrPerson# #cardEvaluatedVerb#]
   #_list.capitalize#"
-- "[_proReveals:Top pro #revealVerb.s#,#pro# #revealVerb.s#,#pros# #revealVerb#]#_proReveals.capitalize# [_planAdj:new,secret,exclusive,classified,fresh,winning,innovative,groundbreaking,radical]#_planAdj#
-  #planNoun# for #event#: Play [_what:#randomAnyCard#,#cardCategory.s#,#cardCategoryClassTerm#]#_what# in #deck# to [_confound:confound,fluster,thwart,foil,cripple,debilitate,hamstring,overwhelm,crush,win against,prepare for,trump][_counter:beat,counter,trump,win against,foil][_confoundOrCounter:#_confound#,#_counter#][_win:#_counter# #randomCardAlone#,#_confound# #deckArchOrCategory#,#_confoundOrCounter# #cardCategoryClassTerm#]#_win#"
+- "[_format:#popularFormat#,#format#][_proReveals:#_format# #expertPlayer.s# #revealVerb# their,#pro# #revealVerb.s# #their#,#pros# #revealVerb# their]#_proReveals.capitalize# [_planAdj:new,secret,exclusive,classified,fresh,winning,innovative,groundbreaking,radical]#_planAdj#
+  #planNoun# for #event#: Play [_what:#randomAnyCard#,#cardCategory.s#,#cardCategoryClassTerm#]#_what# in #deck# to [_confound:beat,counter,outclass,confound,fluster,thwart,foil,cripple,debilitate,hamstring,overwhelm,crush,win against,prepare for,trump][_counter:beat,counter,trump,win against,foil][_confoundOrCounter:#_confound#,#_counter#][_win:#_counter# #randomCardAlone#,#_confound# #deckArchOrCategory#,#_confoundOrCounter# #cardCategoryClassTerm#]#_win#"
 - "#recentCardSet# [_format:Limited,Constructed]#_format# Set Review:[_color: #basicColors.capitalize#,]#_color#
   #cardCategory.s.capitalizeAll# and [_other:#cardCategory#,#creatureTypes#]#_other.s.capitalizeAll#"
 - "#recentCardSet# #format# Set Review: [_cat:#basicColors#,#cardCategory.s# and #cardCategory.s#]#_cat.capitalizeAll#"
