--- a/src/data/grammar/headlines/flavor-text.yaml
+++ b/src/data/grammar/headlines/flavor-text.yaml
@@ -51,7 +51,7 @@ flavorText:
   - >
     "No wonder where you find them, #creatureTypes.s# love #pluralNounOrMassNoun#."
   - >
-    "We hold sacred the powers of #abstractNoun# and #abstractNoun#. #abstractNounMassNounOrEmotion.capitalize# and #abstractNounMassNounOrEmotion# are our [_adj:greatest,oldest,only,favorite,#adjSuperlative#][what:weapons,regrets,problems,obessions,sources of confusion]#_adj# #_what#." —#characterFactionOrRace.capitalize# #motto#
+    "We hold sacred the powers of #abstractNoun# and #abstractNoun#. #abstractNounMassNounOrEmotion.capitalize# and #abstractNounMassNounOrEmotion# are our [_adj:greatest,oldest,only,favorite,#adjSuperlative#][_what:weapons,regrets,problems,obessions,sources of confusion]#_adj# #_what#." —#characterFactionOrRace.capitalize# #motto#
   - >
     "#verbTransitive.capitalize# that which was [_never:never,once]#_never# #verbTransitivePastTense#." —#itemNoun.capitalize# #inscription#
   - >
@@ -71,7 +71,7 @@ flavorText:
   - >
     "[_sound:#nounActionSound#,#soundEmanation#]#_sound.capitalizeAll# of [_noisyThing:#creatureTypes#,#characterClass#,#concreteNoun#]#_noisyThing# and #soundEmanation# of #creatureTypes# [_getQuiet:fall mute,fall silent,are struck dumb]#_getQuiet# when #creatureTypes.s# [_rally:sound the Call to,sing the Hymn to,recite the Prayer to,quote the Book of,hum the tune of,sing the praises of,sing the Song of][_theRevered:#character#,#abstractMassOrPluralNounGameConceptOrEmotion#]#_rally# #_theRevered.capitalizeAll#."
   - >
-    "[_hypothetically:Maybe,Perhaps,I bet,I doubt,Let's hope,I wonder if]#_hypothetically# we can #verbInceptiveTransitive# them with #pluralNounOrMassNoun#," thought #character#, #verbTransitiveGerund# #character#.
+    "[_hypothetically:Maybe,Perhaps,I bet,I doubt,Let's hope,I wonder if]#_hypothetically# we can #verbInceptiveTransitive# them with #pluralNounOrMassNoun#," thought #character#[_secondPart:,#comma# #verbInceptiveTransitiveGerund# #character#]#_secondPart#.
   - >
     "[_firstVerb:#verbInceptiveIntransitive#][_verb:#_firstVerb#][_secondVerb:#verbInceptiveTransitive#][#placeOrPeopleVerbPluralAgreement#][_object:#_placeOrPeople#]Some days you #_firstVerb# to #_secondVerb# the #_object#. Other days the #_object# #_verbs# to #_secondVerb# you."
   - >
@@ -100,6 +100,8 @@ flavorText:
     "[_heSheExercises:He exercises,She exercises][_theyExercise:#_heSheExercises#,They exercise#][_descClothes:#adjCorporeal# #clothingOrAccessory#][_clothes:#creatureTypeOrCharacterClass.hyphenate.a#'s #clothingOrAccessory#,#_descClothes.aIfNeeded#,#_descClothes.aIfNeeded#][_what:#creatureTypes#,#creatureTypes#,#animal#][_whatsPart:#_what# #bodypartsInPairs#][_right:the right to][_simpleRight:#_heSheExercises# #_right# #_what.hyphenate.a# #bodypart#,#_theyExercise# #_right# #_what.hyphenate# #bodypartsPlural#][_rightToParts:#_simpleRight#,#_simpleRight#,#_heSheExercises# #_right# #_whatsPart.aIfNeeded#,#_heSheExercises# #_right# #_clothes#]#_rightToParts#."
   - >
     "[_who:#personPejorative#,#someGuyOrGal#,#characterClass#,#animal#][_what:#concreteNounOrPluralNoun#][_nextVerb:#verbStrictlyTransitive#,#verbInceptiveTransitive#]The #_who# who #verbInceptiveTransitive.s# the #_what#, #_nextVerb.s# the #_what#."
+  - >
+    "[_member:member of,student of,#creatureTypeOrCharacterClass# from][_school:Institute of,Academy of,Center for,Society for,Guild of][_adj:,,,,#adj# ,#adjCorporeal# ,#adjStorybook# ,#adjValue# ][_subject:#creatureTypes.s#,#creatureTypes.s#,#creatureTypes.s#,#animalPlural#,#animalPlural#,#animalPlural#][_focus:#abstractNounMassNounOrEmotion#,#_adj# #_subject#,#cardQuality# #cardCategory.s#,#character#,#mtgQuestionablePractice#][_acquires:acquires,develops,cultivates][_taste:taste,appetite,fondness,penchant,passion][_vice:#pluralNounOrMassNoun#,#_subject#,#nounActivity#,#clothingOrAccessory.sIfNeeded#,#abstractNoun#,#verbStrictlyTransitiveGerund# #_subject#]Ocassionally a #_member# the #_school# #_focus.capitalizeAll# #_acquires# #_taste.a# for #_vice#.[_rarely:Rarely do,Seldom do,Often,Sometimes,Occasionally,Suprisingly,For some reason][_trouble:trouble,a problem,difficulty,a hard time][_finding:finding,obtaining,getting,finding][_sanction:sanction,approve of,indulge][_investors:supporters for,anyone to #_sanction#,a professor to #_sanction#][_investment:their behavior,their cause,it][_someone:someone,anyone][_goal:employment,a job,#_someone# to join them,believers their cause,#_someone# to help them,a license,#_investors# #_investment#,a date][_secondLine:,, Though it's generally frowned upon., The administration usually doesn't approve., #_rarely# they get expelled., #_rarely# they have #_trouble# #_finding# #_goal#.]#_secondLine#"
 
 characterAttribution:
   - "#planeswalkerFullName#"
