--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -71,6 +71,8 @@
       "Gary Wise[#malePronouns#]",
       "Osyp Lebedowicz[#malePronouns#]",
       "Chris Pikula[#malePronouns#]",
+      "Diego Fumagalli[#malePronouns#]",
+      "Maël Soucaze[#malePronouns#]",
       "#jokePersonality#",
       "[_what:,the ghost of ]#_what##historicalFigure#"
   ],
