--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -64,6 +64,7 @@ disqualifyingAction:
 - "[_how:flagrantly,aggressively,eagerly,thirstily][_verb:chugging,shotgunning,guzzling][_what:PBRs,Mountain Dew,decaf coffee,La Croix,kombucha,Red Bull and zinfandel,motor oil,Easy Cheese,health juice,off-brand cola,Cool Whip,fancy mustards,barbeque sauce,cologne testers,#massNoun#]#_how# #_verb# #_what# between rounds"
 - "[_emoting:enthusiastically pantomiming,physically acting out,creatively narrating]#_emoting# each of #their# spells"
 - "playing #count# Explores"
+- "fancy play"
 - "#crime#"
 - "#crime#"
 
