--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -110,6 +110,7 @@
       "Tsabo Tavoc#femalePronouns#",
       "Vinz Clortho#malePronouns#",
       "Volrath#malePronouns#",
+      "Yargle#malePronouns#",
       "Yawgmoth#malePronouns#",
       "Zuul#femalePronouns#"
   ],
