--- a/src/data/grammar/vocab/nouns/nouns.yaml
+++ b/src/data/grammar/vocab/nouns/nouns.yaml
@@ -23,11 +23,11 @@
       "#massNoun#"
   ],
   "pluralNoun": [
-      "#cardCategory.s#",
-      "#creatureTypes.s#",
-      "#itemNoun.s#",
+      "#cardCategory.sIfNeeded#",
+      "#creatureTypes.sIfNeeded#",
+      "#itemNoun.sIfNeeded#",
       "#irregularPluralNoun#",
-      "#placeNoun.s#"
+      "#placeNoun.sIfNeeded#"
   ],
   "aNoun": [
       "#cardCategory.a#",
